<resources>
    <string name="app_name">Gait Analysis</string>

    <string name="skip_button_label">Skip</string>
    <string name="input">Input</string>
    <string name="input_custominvalidation">Input (Custom Invalidation)</string>
    <string name="input_hint">John Appleseed</string>
    <string name="input_content">What\'s your name?</string>
    <string name="simple_list">Simple Dialog (Guidelines Spec)</string>
    <string name="set_backup">Set backup account</string>
    <string name="add_account">Add account</string>
    <string name="submit">Submit</string>
    <string name="preference_dialog_message">This is an example of a dialog message.</string>
    <string name="preference_dialog_title">Dialog Title</string>
    <string name="material_dialog_pref_title">Dialog Preference</string>
    <string name="material_dialog_pref_summary">This is an example of a basic dialog preference that automatically uses Material Dialogs to show the dialog.</string>
    <string name="input_content_custominvalidation">Do not type hello, or else!</string>

    <string name="preference_dialogs">Preference Dialogs</string>
    <string name="list_pref_title">List Preference</string>
    <string name="list_pref_desc">This is an example of a list preference that automatically uses Material Dialogs to show the list dialog.</string>
    <string name="multilist_pref_title">Multi Select List Preference</string>
    <string name="multilist_pref_desc">This is an example of a multi select list preference that automatically uses Material Dialogs to show the list dialog.</string>
    <string name="edittext_pref_title">EditText Preference</string>
    <string name="edittext_pref_desc">This is an example of an EditText preference that automatically uses Material Dialogs to show the input dialog.</string>
    <string name="edittext_pref_dialogtitle">Enter a Name</string>
    <string name="edittext_pref_optionalvalue">Default value</string>
    <string name="progress_dialog_indeterminate">Progress Dialog (Indeterminate)</string>
    <string name="progress_dialog_indeterminate_horizontal">Progress Dialog (Horizontal Indeterminate)</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="please_wait">Please wait…</string>
    <string name="done">Done!</string>
    <string name="optional_dialog_message">This is an optional dialog message.</string>
    <string name="multiChoiceLimited">Multi Choice (Limit Selections)</string>
    <string name="selection_limit_reached">Selection limit reached!</string>

    <string name="select_pos_spinner_title">Select Position</string>

</resources>
